solve issues